# coinflip

./: .dockerignore  .env.development.local.example  .env.example  .gitignore  AUDIT-PERFORMANCE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  PROJECT_STATUS.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.claude/: settings.local.json
.cursor/rules/: api-openapi-swagger.mdc  authz-feegrant.mdc  backend-services.mdc  coding-standards.mdc  database-schema.mdc  frontend.mdc  project-overview.mdc  security-and-threats.mdc  smart-contract.mdc
apps/api/: package.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/api/src/: app.test.ts  app.ts  index.ts  types.ts
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/public/: coinflip-web-log-export-2026-03-03T16-36-35.json  coinflip-web-log-export-2026-03-08T15-47-30.json  logs.1772555745506.json  logs.1772639685684.json  logs.1772641525805.json  logs.1772984903391.json  logs.1773327709039.csv
apps/web/scripts/: generate-favicons.ts
contracts/coin-presale/: Cargo.toml
contracts/coin-presale/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/coinflip-pvp-vault/: Cargo.toml
contracts/coinflip-pvp-vault-native/: Cargo.toml
contracts/coinflip-pvp-vault-native/src/: contract.rs  error.rs  lib.rs  msg.rs  query.rs  state.rs  testing.rs  tests.rs
contracts/coinflip-pvp-vault/src/: contract.rs  error.rs  msg.rs  query.rs  state.rs  testing.rs  tests.rs
contracts/coinflip-pvp-vault/src/execute/: accept_bet.rs  admin_sweep.rs  cancel_bet.rs  claim_timeout.rs  create_bet.rs  deposit.rs  mod.rs  reveal.rs  withdraw.rs
contracts/cw20-migrate-fix/: Cargo.toml
contracts/cw20-migrate-fix/src/: lib.rs
contracts/launch-staking/: Cargo.toml
docs/: AI_BOT.md  ARCHITECTURE.md  AXM_ECONOMY_MIGRATION.md  CLAUDE_CHANGELOG.md  CLAUDE_PLAN.md  TX_TIMEOUT_ANALYSIS.md
scripts/: cancel-all-open-bets.ts  cancel-chain-bet.ts  check-test-accounts.ts  claim-timeout.ts  deploy-contract.ts  deploy-native-contract.ts  deploy-presale.ts  deploy-staking.ts  deposit-test.ts  diagnose-stuck-locked.ts  fix-launch-logo.ts  grant-authz.ts  launch-extended.json  merge-treasury-relayer.ts  migrate-contract.ts  migrate-native-contract.ts  package.json  recover-coin-tokens.ts  recover-launch.ts  run-migration.mjs  setup-treasury-grants.ts  sync-balances.ts  test-game-cycle.ts  test-withdraw.ts  update-config-now.ts  update-config.ts  update-launch-marketing.ts  verify-contract.ts
tooling/openapi/: openapi.json  package.json  tsconfig.tsbuildinfo
(+274 files in other folders)
