[package]
name = "coin-presale"
version = "0.1.0"
edition = "2021"
authors = ["CoinFlip Team"]
description = "Presale contract: swap native AXM for COIN (CW20) at a configurable rate"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std = { version = "1.5", features = ["cosmwasm_1_4"] }
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw20 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cw-multi-test = "0.20"
cosmwasm-std = { version = "1.5", features = ["cosmwasm_1_4"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
