[package]
name = "cw20-migrate-fix"
version = "0.1.0"
edition = "2021"
description = "Minimal CW20-base wrapper with custom migrate handler to fix marketing info"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
cosmwasm-std = { version = "1.5", features = ["cosmwasm_1_4"] }
cosmwasm-schema = "1.5"
cw2 = "1.1"
cw20 = "1.1"
cw20-base = { version = "1.1", features = ["library"] }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
